<resources>
    <!--General Strings-->
    <string name="poll_it">POLL IT</string>
    <string name="please_enter_username_and_password">Please enter username and password</string>
    <string name="to_learn_about_our_honstey_policy">To learn about our honstey policy</string>
    <string name="click_here">CLICK HERE</string>
    <string name="poll_name">Poll\'s Name</string>
    <string name="upload">UPLOAD</string>
    <string name="finish">FINISH</string>
    <string name="let_s_earn_together">Let\'s Earn Together</string>
    <string name="what_is_your_answer">What Is Your Answer?</string>
    <string name="map">MAP</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!--Login/Register Strings-->
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="address">Address (Country, City, Street, Number)</string>
    <string name="register">Register</string>
    <string name="sign_in">SIGN IN</string>
    <string name="is_signed_in">is_signed_in</string>
    <string name="password">Password</string>
    <string name="password_rules">*8-20 characters.\n*Must have:Lowercase And uppercase letter.\n*Must have a Digit and a Special character</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="registration_details_needed">Registration Details are needed</string>
    <string name="user_already_exists">User is already exists</string>
    <string name="server_is_off">Oops… Server is having issues - Try Again Later</string>
    <string name="success">Success</string>
    <string name="email_or_password_is_incorrect">Email or Password is incorrect</string>
    <string name="image_upload_failed">Upload failed</string>
    <string name="please_upload_your_image">Please Upload Your Image</string>
    <string name="account_unreliability_rank_too_high">Account unreliability rank is too high</string>
    <string name="user_has_been_blocked">This user has been blocked by our system</string>


    <!--Details Strings-->
    <string name="invalid_address">Invalid Address</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="missing_answer">Please Choose an Answer</string>
    <string name="missing_name">Name is Required</string>
    <string name="missing_address">Address is Required</string>
    <string name="edit_details_policy">You can edit your details once a month</string>

    <!--Shared Preferences Strings-->
    <string name="user_key">user_key</string>
    <string name="users_list_last_update_date">users_list_last_update_date</string>
    <string name="user_email">user_email</string>
    <string name="user_name">user_name</string>
    <string name="gender">gender</string>
    <string name="user_address">user_address</string>
    <string name="profile_pic_url">profile_pic_url</string>
    <string name="access_token">access_token</string>
    <string name="refresh_token">refresh_token</string>
    <string name="user_coins">coins</string>
    <string name="user_rank">rank</string>
    <string name="is_alerted">is_alerted</string>

    <!--Reward-Center Strings-->
    <string name="you_ve_already_collected">You\'ve Already Collected</string>
    <string name="by">By</string>
    <string name="collect_prize">Collect Prize</string>
    <string name="products">Your Rewards</string>
    <string name="expiry">Expiry:</string>
    <string name="total">Total:</string>
    <string name="no_purchase_has_been_made_yet">No purchase has been made yet</string>
    <string name="there_are_no_active_polls">There are No Active Polls</string>

    <!--Storage Strings-->
    <string name="sd_card_download_path">/sdcard/Download/</string>
    <string name="authorities">com.example.appproject.fileprovider</string>
    <string name="storage_issue">Oops… We ran into an issue - Try Again Later</string>
    <string name="back">BACK</string>
    <string name="edit">EDIT</string>

    <!--Poll Strings-->
    <string name="select_an_answer">Please Select An Answer</string>


    <!--Facebook Strings-->
    <string name="facebook_app_id">1422304881523843</string>
    <string name="fb_login_protocol_scheme">fb1422304881523843</string>
    <string name="facebook_client_token">80f646c8177785019d8f35d46eedb702</string>
    <string name="current_account_facebook_id">facebookId</string>
    <string name="hello">Hello, </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Rank Strings-->
    <string name="rank_is_over_six">Dishonest activity has been detected. Beware! it may cause rejection</string>
    <string name="remember_an_unhonest_answers_may_cause_rejction">Remember, an dishonest answers may cause rejection</string>
    <string name="quantity">Quantity</string>
    <string name="your_balance">Your Balance:</string>


</resources>