<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".login.FragmentSignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sign_title"
            android:layout_width="319dp"
            android:layout_height="62dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/please_enter_username_and_password"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feed_img_logo" />

        <ImageView
            android:id="@+id/feed_img_logo"
            android:layout_width="306dp"
            android:layout_height="160dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo__nobg_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_title">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/email"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_account"
                    android:drawablePadding="14dp"
                    android:fontFamily="sans-serif-light"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="14dp"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="260dp"
            android:layout_height="57dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/primeRed"
            android:text="@string/sign_in"
            app:cornerRadius="37sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />


        <TextView
            android:id="@+id/splash_txt_title"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/poll_it"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

        <ProgressBar
            android:id="@+id/sign_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>