<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".login.FragmentChangePassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/changePassword_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="Please Enter Old and New Password"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePassword_logo" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/changePassword_logo"
            android:layout_width="306dp"
            android:layout_height="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo__nobg_2" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/changePassword_linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePassword_title_text">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/changePassword_lout_old_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/old_password"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/primeOrng"
                app:boxStrokeErrorColor="@color/primeRed"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:helperTextTextColor="@color/white"
                app:errorEnabled="true"
                app:errorTextColor="@color/primeRed"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/changePassword_input_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/changePassword_lout_new_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/primeOrng"
                app:boxStrokeErrorColor="@color/primeRed"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:helperTextTextColor="@color/white"
                app:helperText="@string/password_rules"
                app:errorEnabled="true"
                app:errorTextColor="@color/primeRed"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/changePassword_input_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/changePassword_lout_new_confirmpass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/confirm_password"
                android:focusable="true"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/primeOrng"
                app:boxStrokeErrorColor="@color/primeRed"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:errorEnabled="true"
                app:errorTextColor="@color/primeRed"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/changePassword_input_confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/changePassword_btn_changePassword"
            android:layout_width="330dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:text="@string/change_password"
            app:cornerRadius="37sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePassword_linearLayoutCompat2" />

        <ProgressBar
            android:id="@+id/changePassword_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>