<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ImageframeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1E7E7"
    android:backgroundTint="#000000"
    tools:context=".details.FragmentUserImage">

<!--    <com.google.android.material.imageview.ShapeableImageView-->
<!--        android:id="@+id/userImg_img_main"-->
<!--        android:layout_width="306dp"-->
<!--        android:layout_height="120dp"-->
<!--        android:src="@drawable/logo__nobg_2"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/userImg_btn_line"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#978F8F"
        app:cornerRadius="100px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat4" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userImg_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/please_upload_your_image"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutCompat4"
        android:layout_width="match_parent"
        android:layout_height="406dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImg_text_title">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userImg_img_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:maxWidth="300dp"
            android:maxHeight="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@drawable/avatar"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/userImg_btn_upload_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"

            android:layout_marginTop="48dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/primeRed"
            android:drawableRight="@drawable/ic_upload"
            android:fontFamily="sans-serif-black"
            android:paddingLeft="30dp"
            android:text="@string/upload"
            android:textSize="16dp"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/userImg_btn_upload_cam"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userImg_img_user"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <ImageButton
            android:id="@+id/userImg_btn_upload_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toBottomOf="@+id/userImg_btn_upload_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/userImg_btn_upload_gallery"
            app:layout_constraintTop_toTopOf="@+id/userImg_btn_upload_gallery" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/userImg_finish_btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/finish"
        android:textSize="20sp"
        app:cornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImg_btn_line"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/userImg_btn_back"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif"
        android:text="BACK"
        android:textSize="20sp"
        app:cornerRadius="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImg_btn_line"
        app:strokeColor="@color/primeOrng"
        app:strokeWidth="1dp" />

    <ProgressBar
        android:id="@+id/userImg_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>






